# python-event-superschema

./: .gitignore  .pylintrc  LICENSE  README.md  bootstrap  docker-compose.yml  docstrings2md.py  guidelines.ipynb  index.html  pyproject.toml  test.sh
.github/workflow/: paper.ci
.github/workflows/: paper.yml
event_superschema/: __init__.py  _super_schema.py  get_event_dispatcher.py  get_jwe_event_dispatcher.py  get_jwe_send_event_function.py  get_jws_event_dispatcher.py  get_jws_send_event_function.py  get_send_event_function.py
examples/: purchase_order.py  rx_purchase_order.py  tx_purchase_order.py
src/: __init__.py  events.py
tests/: _error_schema_validator.py  test_dispatching.py  test_encryption.py  test_formatting.py  test_signing.py
